[package]
name = "BE"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.0.1"
actix-web-httpauth = "0.8"
actix-cors = "0.6.4"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
bcrypt = "0.13"
lettre = "0.10"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-multipart = "0.5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10" 
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"